# FindIl2cppApi

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  find_il2cpp_api.js.in  genjs.ps1  listunityso.ps1  log.txt  main.cpp  run.ps1
